.envに対してアプリケーション側でDB接続に必要な情報の環境変数を定義

--- a/.env
+++ b/.env
@@ -1,2 +1,15 @@
-#DB接続情報を入力
-#
+# DB接続情報を入力
+# ホスト名
+DB_HOST=
+
+# DBパスワード
+DB_PASS=
+
+# DBユーザー(オーナー）
+DB_USER=
+
+# DB名
+DB_NAME=
+
+# DBポート
+DB_PORT=
