.env.sampleの記入例を記入、READMEを更新

--- a/.env.sample
+++ b/.env.sample
@@ -1,18 +1,18 @@
-# DB接続情報を入力
+# DB接続情報を入力(記入例)
 # ホスト名
-DB_HOST=
+DB_HOST=localhost
 
 # DBパスワード
-DB_PASS=
+DB_PASS=dbpass
 
 # DBユーザー(オーナー）
-DB_USER=
+DB_USER=dbuser
 
 # DB名
-DB_NAME=
+DB_NAME=dbname
 
 # DBポート
-DB_PORT=
+DB_PORT=dbport
 
 #テーブル名
-TABLE_NAME=
+TABLE_NAME=tablename
