記入例を英訳 不要なテーブル名を削除

--- a/.env.sample
+++ b/.env.sample
@@ -1,18 +1,16 @@
-# DB接続情報を入力(記入例)
-# ホスト名
+# DB connection information(Entry example)
+
+# HOSTS
 DB_HOST = localhost
 
-# DBパスワード
+# DB PASSWORD
 DB_PASS = dbpass
 
-# DBユーザー(オーナー）
+# DB USER(OWNER）
 DB_USER = dbuser
 
-# DB名
+# DB NAME
 DB_NAME = dbname
 
-# DBポート
+# DB PORT
 DB_PORT = dbport
-
-#テーブル名
-TABLE_NAME = tablename
